--- a/style.css
+++ b/style.css
@@ -2,4 +2,10 @@
     margin: 0%;
     padding: 0%;
     box-sizing: border-box;
+    font-family: 'Times New Roman', Times, serif;
+}
+body {
+    margin-left: 15px;
+    padding: 10px;
+    font-size: 18px;
 }
